tests/snapshots/execution_spec__custom-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(headers: {custom: [{key: "x-id", value: "1"}, {key: "x-name", value: "John Doe"}]}) @upstream {
  query: Query
}

type Query {
  greet: String
}
