tests/snapshots/execution_spec__env-value.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post1": {
        "body": "Post 1 body",
        "id": 1,
        "title": "Post 1",
        "userId": 1
      },
      "post2": {
        "body": "Post 2 body",
        "id": 2,
        "title": "Post 2",
        "userId": 2
      },
      "post3": {
        "body": "Post 3 body",
        "id": 3,
        "title": "Post 3",
        "userId": 3
      }
    }
  }
}
