tests/snapshots/execution_spec__env-value.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  post1: Post @http(path: "/posts/{{env.ID}}")
  post2: Post @http(path: "/posts/{{env.POST_ID}}")
  post3: Post @http(path: "/posts/{{env.NESTED_POST_ID}}")
}
