tests/snapshots/execution_spec__experimental-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(headers: {experimental: ["X-experimental", "x-tailcall"]}) {
  query: Query
}

type Query {
  users: [User] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users")
}

type User {
  id: Int
  name: String
}
