tests/snapshots/execution_spec__experimental-headers.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "x-experimental": "experimental-header",
    "x-tailcall": "tailcall-header"
  },
  "body": {
    "data": {
      "users": [
        {
          "id": 1,
          "name": "Leanne Graham"
        }
      ]
    }
  }
}
