tests/snapshots/execution_spec__file-json-graphql.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  expr_users: [User]
  users: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
